[add] JavaScriptの機能追加、クリックで色を変える

--- a/MyJSPractice/index.html
+++ b/MyJSPractice/index.html
@@ -14,5 +14,12 @@
 </head>
 <body>
   <div id="target" class="box"></div>
+
+  <script>
+    'use strict';
+    document.getElementById('target').addEventListener('click', function() {
+      document.getElementById('target').style.background = 'pink';
+    });
+  </script>
 </body>
 </html>
