[update] クリック時の色をピンクではなく赤に変える

--- a/MyJSPractice/index.html
+++ b/MyJSPractice/index.html
@@ -18,7 +18,7 @@
   <script>
     'use strict';
     document.getElementById('target').addEventListener('click', function() {
-      document.getElementById('target').style.background = 'pink';
+      document.getElementById('target').style.background = 'red';
     });
   </script>
 </body>
