[update] シングルクリックではなく、ダブルクリックで色が変わるように

--- a/MyJSPractice/index.html
+++ b/MyJSPractice/index.html
@@ -17,7 +17,7 @@
 
   <script>
     'use strict';
-    document.getElementById('target').addEventListener('click', function() {
+    document.getElementById('target').addEventListener('dblclick', function() {
       document.getElementById('target').style.background = 'red';
     });
   </script>
