--- a/MyJSPractice/index.html
+++ b/MyJSPractice/index.html
@@ -10,6 +10,10 @@
       background: skyblue;
       cursor: pointer;
     }
+    .circle {
+      border-radius: 50%;
+      background: pink;
+    }
   </style>
 </head>
 <body>
@@ -18,8 +22,7 @@
   <script>
     'use strict';
     document.getElementById('target').addEventListener('click', function() {
-      document.getElementById('target').style.background = 'pink';
-      document.getElementById('target').style.borderRadius = '50%';
+      document.getElementById('target').classList.add('circle');
     });
   </script>
 </body>
