[update] CSSアニメーションを付ける
対応レッスン
https://dotinstall.com/lessons/basic_javascript_v3/46406

--- a/MyJSPractice/index.html
+++ b/MyJSPractice/index.html
@@ -9,10 +9,12 @@
       height: 100px;
       background: skyblue;
       cursor: pointer;
+      transition: 0.8s;
     }
     .circle {
       border-radius: 50%;
       background: pink;
+      transform: rotate(360deg);
     }
   </style>
 </head>
