[update] addからtoggleへ変更
クリックのたびに、該当のクラスが付加されていなければ付加し、すでに付加されていれば外すようになる
対応レッスン
https://dotinstall.com/lessons/basic_javascript_v3/46407

--- a/MyJSPractice/index.html
+++ b/MyJSPractice/index.html
@@ -24,7 +24,7 @@
   <script>
     'use strict';
     document.getElementById('target').addEventListener('click', function() {
-      document.getElementById('target').classList.add('circle');
+      document.getElementById('target').classList.toggle('circle');
     });
   </script>
 </body>
