[update] 定数化してコードを整理
対応レッスン
https://dotinstall.com/lessons/basic_javascript_v3/46407

--- a/MyJSPractice/index.html
+++ b/MyJSPractice/index.html
@@ -23,8 +23,9 @@
 
   <script>
     'use strict';
-    document.getElementById('target').addEventListener('click', function() {
-      document.getElementById('target').classList.toggle('circle');
+    const target = document.getElementById('target');
+    target.addEventListener('click', function() {
+      target.classList.toggle('circle');
     });
   </script>
 </body>
