--- a/MyJSPractice/index.html
+++ b/MyJSPractice/index.html
@@ -10,6 +10,8 @@
       background: skyblue;
       cursor: pointer;
       transition: 0.8s;
+      float: left;
+      margin: 0 8px 8px 0;
     }
     .circle {
       border-radius: 50%;
@@ -19,13 +21,23 @@
   </style>
 </head>
 <body>
-  <div id="target" class="box"></div>
+  <div id="target1" class="box"></div>
+  <div id="target2" class="box"></div>
+  <div id="target3" class="box"></div>
 
   <script>
     'use strict';
-    const target = document.getElementById('target');
-    target.addEventListener('click', function() {
-      target.classList.toggle('circle');
+    const target1 = document.getElementById('target1');
+    const target2 = document.getElementById('target2');
+    const target3 = document.getElementById('target3');
+    target1.addEventListener('click', function() {
+      target1.classList.toggle('circle');
+    });
+    target2.addEventListener('click', function() {
+      target2.classList.toggle('circle');
+    });
+    target3.addEventListener('click', function() {
+      target3.classList.toggle('circle');
     });
   </script>
 </body>
