[update] divの並べ方をレッスンに合わせる
対応レッスン
https://dotinstall.com/lessons/basic_javascript_v3/46408

--- a/MyJSPractice/index.html
+++ b/MyJSPractice/index.html
@@ -4,13 +4,16 @@
   <meta charset="utf-8">
   <title>JavaScript Practice</title>
   <style>
+    body {
+      display: flex;
+      flex-wrap: wrap;
+    }
     .box {
       width: 100px;
       height: 100px;
       background: skyblue;
       cursor: pointer;
       transition: 0.8s;
-      float: left;
       margin: 0 8px 8px 0;
     }
     .circle {
